--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,16 @@
 <h1>Hello new project</h1>
+<p>{{ title }}</p>
+<p>
+  <strong>{{ number - 3 }}</strong>
+</p>
+<p>{{ arr }}</p>
+<p>{{ obj }}</p>
+<p>{{ obj.a }}</p>
+<p>
+  <strong>{{ "Hello world" }}</strong>
+</p>
+<hr />
 <app-post></app-post>
-<app-post></app-post>
+<!-- <app-post></app-post> -->
+<hr />
+<app-post4></app-post4>
