Binding  exmpl added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>Hello new project</h1>
-<p>{{ title }}</p>
+<!-- <p>{{ title }}</p>
 <p>
   <strong>{{ number - 3 }}</strong>
 </p>
@@ -8,7 +8,9 @@
 <p>{{ obj.a }}</p>
 <p>
   <strong>{{ "Hello world" }}</strong>
-</p>
+</p> -->
+<img [src]="img" alt="" />
+<!--<----binding-->
 <hr />
 <app-post></app-post>
 <!-- <app-post></app-post> -->
