--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,20 @@
 <p>
   <strong>{{ "Hello world" }}</strong>
 </p> -->
+
+<button (click)="onClick()">Click me!</button>
+<button (keyup)="onClick()">Click me!</button>
+
+<input type="text" (keyup.enter)="onInput($event)" />
+<input
+  type="text"
+  (keyup.enter)="onInput($event)"
+  (blur)="onBlur(myInput.value)"
+  #myInput
+/>
+<p>
+  <strong>{{ inputValue }}</strong>
+</p>
 <img [src]="img" alt="" />
 <!--<----binding-->
 <hr />
